--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,7 @@
   "MailSettings": {
     "Mail": "tranthach3132@gmail.com",
     "DisplayName": "tranthach3132",
-    "Password": "thach31032000",
+    "Password": "***",
     "Host": "smtp.gmail.com",
     "Port": 587
   }
